--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/6110110072/DCW_OAuth.git"
+  },
+  "bugs": {
+    "url": "https://github.com/6110110072/DCW_OAuth/issues"
+  },
+  "homepage": "https://github.com/6110110072/DCW_OAuth#readme"
 }
